# nova-ui-kit

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/layout/: AppShell.tsx  CommandPalette.tsx  InspectorPanel.tsx  NavigationRail.tsx  Sidebar.tsx  StatusBar.tsx  Topbar.tsx  WindowTitlebar.tsx
src/components/showcase/: ApplicationPatternsShowcase.tsx  BuilderShowcase.tsx  ButtonsShowcase.tsx  DataDisplayShowcase.tsx  FeedbackShowcase.tsx  FormControlsShowcase.tsx  NavigationShowcase.tsx  ShowcasePage.tsx  ShowcaseScaffold.tsx
src/components/ui/: avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  segmented-control.tsx  select.tsx  sheet.tsx  skeleton.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
src/data/: components.ts  demo.ts
