[package]
name = "nova-ui-kit"
version = "0.1.0"
description = "Nova UI Kit desktop shell"
authors = ["Nova UI Kit"]
license = "MIT"
repository = "https://github.com/sorrowfeng/nova-ui-kit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nova_ui_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
